<resources>
    <string name="app_name">汽车管家</string>
    <string name="car">Car</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="history">历史</string>
    <string name="statistics">统计</string>
    <string name="oil">加油</string>
    <string name="maintenance">开支</string>
    <string name="expense">开支</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="oil_money">总花费</string>
    <string name="oil_price">单价(L)</string>
    <string name="oil_quantity">升</string>
    <string name="confirm">确认</string>
    <string name="date_picker_time">时间</string>
    <string name="cancel">取消</string>
    <string name="tag_mt_hint">标记标签</string>
    <string name="sucess">保存成功</string>
    <string name="fail">保存失败</string>
    <string name="add_oil">加油</string>
    <string name="km">km</string>
    <string name="RMB">¥&#160;</string>
    <string name="delete_sucess">删除成功</string>
    <string name="chart">油耗表</string>
    <string name="err_empty_odo">请输入汽车里程</string>
    <string name="oil_type">燃料</string>
    <string name="setting_oiltype_dialog_title">删除</string>
    <string name="setting_oiltype_dialog_msg">您确认要删除吗？</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="update_sucess">修改数据成功</string>
    <string name="update">修改</string>
    <string name="total_money">总花费</string>
    <string name="fuelC">百公里油耗（L/100KM）：</string>
    <string name="perKm">每公里单价（元/L）：</string>
    <string name="tips">提示</string>
    <string name="tips_msg">两次加满油之间计算油耗。</string>
    <string name="permission_fail">权限获取失败</string>
    <string name="err_empty_money">请输入金额</string>
    <string name="err_empty_tag">请选择标签，可多选</string>
    <string name="query">查询</string>
    <string name="from">从</string>
    <string name="to">至</string>
    <string name="query_expense">查询开支</string>
    <string name="query_oil">查询加油</string>
    <string name="update_warning">\t\t\t请尽量不要修改名称，可以先删除再增加，不会影响原有数据。\n\t\t\t非常抱歉，我会尽快修正这个问题。</string>
    <string name="show_delete_tag">显示已删除标签</string>
    <string name="hide_delete_tag">隐藏已删除标签</string>
    <string name="wrong_from_date">起始时间不能大于结束时间</string>
    <string name="accout">账户</string>
    <string name="password">密码</string>
    <string name="err_account">请输入正确的手机号码</string>
    <string name="Complete">登录成功</string>
    <string name="Error">登录失败</string>
    <string name="Upload">登录中...</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="skip">试用</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="get_code">获取验证码</string>
    <string name="reg_sucess">注册成功</string>
    <string name="err_empty_login">账户、密码不能为空</string>
    <string name="time">s后再尝试</string>
    <string name="code">验证码</string>
    <string name="back">反馈</string>
    <string name="input_psw">请输入密码</string>
    <string name="input_psw_again">请再次输入密码</string>
    <string name="over">完成</string>
    <string name="err_empty_psw">密码不能为空</string>
    <string name="err_psw_short">密码太短，6位以上</string>
    <string name="err_psw_unequal">两次输入的密码不相等</string>
    <string name="err_unexist_acc">账户不存在</string>
    <string name="change_psw_sucess">修改密码成功</string>
    <string name="save_fail">保存失败</string>
    <string name="err_psw">密码错误</string>
    <string name="err_encrypt">密码加密错误</string>
    <string name="car_manager">汽车管理</string>
    <string name="single_car_warning">抱歉，多车辆管理正在赶工中...</string>
    <string name="app_update">发现新版本</string>
    <string name="login_out">注销</string>
    <string name="err_non_acc">账户不存在</string>
    <string name="other">其他</string>
</resources>
