<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/history"/>
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_show_chart"
            android:title="@string/statistics"/>
        <item
            android:id="@+id/nav_oil"
            android:icon="@drawable/oil"
            android:title="@string/oil"/>
    </group>

    <item android:title="@string/about">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/setting"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/about"/>
            </group>
        </menu>
    </item>

</menu>
