<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:orientation="vertical"
                tools:context="com.kyle.mycar.Fragment.DatePickerDialogFragment">

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </DatePicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/date_picker_time"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/date_picker_time"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/date_picker_cancel"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/date_picker_confirm"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>



</LinearLayout>
