<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kyle.mycar.Fragment.DetailOilFragment">

    <include layout="@layout/app_bar"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_money"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.kyle.mycar.View.NumberAnimTextView
            android:id="@+id/tv_money_oil_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            tools:ignore="HardcodedText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <ImageView
            android:id="@+id/iv_odo_oil_detail"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="@+id/tv_money_oil_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_money_oil_detail"
            app:srcCompat="@drawable/odo"
            android:layout_marginLeft="0dp"/>

        <TextView
            android:id="@+id/tv_odo_oil_detail"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/iv_odo_oil_detail"
            app:layout_constraintLeft_toRightOf="@+id/iv_odo_oil_detail"
            app:layout_constraintTop_toTopOf="@+id/iv_odo_oil_detail"
            app:layout_constraintVertical_bias="0.0"/>

        <ImageView
            android:id="@+id/iv_date_oil_detail"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/date"
            android:tint="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_odo_oil_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/tv_date_oil_detail"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/iv_date_oil_detail"
            app:layout_constraintLeft_toRightOf="@+id/iv_date_oil_detail"
            app:layout_constraintTop_toTopOf="@+id/iv_date_oil_detail"
            app:layout_constraintVertical_bias="0.0"/>
        <TextView
            android:background="@color/LineGray"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/tv_oil_type_oil_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:text="汽油"
        android:gravity="bottom"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="金额"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="价格"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="数量"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_oil_money_oil_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="金额"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_oil_price_oil_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="价格"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_oil_quantity_oil_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="数量"
            android:textSize="16sp"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_weight="14"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:background="@color/LineGray"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="1dp"/>
        <TextView
            android:id="@+id/tv_fuelC_title_oil_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fuelC"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tv_fuelC_oil_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fuelC"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fuelC_title_oil_detail"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/tv_perKm_title_oil_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/perKm"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_fuelC_oil_detail"
            android:layout_marginStart="24dp"/>

        <TextView
            android:id="@+id/tv_perKm_oil_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/perKm"
            android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_perKm_title_oil_detail"
            android:layout_marginStart="24dp"/>
        <ImageView
            android:id="@+id/iv_pic_oil_detail"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="数量"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="24dp"/>
    </android.support.constraint.ConstraintLayout>


</LinearLayout>
